--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,32 +9,34 @@
 <body>
     <div class="link"> <a href="#" title="SignUp">Schon Teil der Crew? Hier geht's zum Registration</a> </div>
 
-    <div class="content-wraper">
+    <div class="content-wraper-image">
         <div class="image">
             <img src="../assets/images/locsterLogo_Gruen.png" alt="Logo">
         </div>
-        <div class="text">
-            <p>
-                Hey Du! Hast auch du nicht Lust mit neuen Leuten aus deiner City zu connecten? Dann tauch ab in die Welt von Locster! Einfach easypeasy unten registrieren und ZACK- liegt dir die ganze Stadt offen! Wir freuen uns auf dich!
-            </p>
-        </div>
-        <div class="form">
-            <form>
-                <div class="inputs">
-                    <input type="email" placeholder="enter_email" name="email" required>
-                    <input type="password" placeholder="enter_password" name="password" required>
-                </div>
-                <div class="checkbox">
-                    <label>
+        <div class="form-text-container">
+            <div class="text">
+                <p>
+                    Hey Du! Hast auch du nicht Lust mit neuen Leuten aus deiner City zu connecten? Dann tauch ab in die Welt von Locster! Einfach easypeasy unten registrieren und ZACK- liegt dir die ganze Stadt offen! Wir freuen uns auf dich!
+                </p>
+            </div>
+            <div class="form">
+                <form>
+                    <div class="inputs">
+                        <input type="email" placeholder="enter_email" name="email" required>
+                        <input type="password" placeholder="enter_password" name="password" required>
+                    </div>
+                    <div class="checkbox">
+                        <label>
                 <input type="checkbox" checked="checked" name="Remember"> Eingeloggt bleiben
                 </label>
-                </div>
-                <div class="submitButton">
+                    </div>
+                    <div class="submitButton">
 
-                    <button type="submit">Login</button>
-                </div>
+                        <button type="submit">Login</button>
+                    </div>
 
-            </form>
+                </form>
+            </div>
         </div>
 
     </div>
