--- a/src/main/resources/assets/css/style.css
+++ b/src/main/resources/assets/css/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    color: white;
+    color: #002B15;
     background: linear-gradient(45deg, #05c5e4, #b1ffd7, #f6fddf);
     background-size: 1000% 1000%;
     animation: colors 10s ease infinite;
@@ -33,21 +33,32 @@ body {
 }
 
 .link {
-    /* float: right; */
-    background-color: red;
-    clear: left;
+    direction: rtl;
 }
 
-.content-wraper {
+.content-wraper-image {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.image {
-    background-color: black;
+.image img {
+    width: 730px;
 }
 
-.image img {
-    height: 230px;
+.form-text-container {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form-text-container .text p {
+    padding: 0 0 50px 0;
+    text-align: center;
+}
+
+.form {
+    background-color: #FFECF4;
+    padding: 50px;
 }
