--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,23 +16,25 @@
         <div class="form-text-container">
             <div class="text">
                 <p>
-                    Hey Du! Hast auch du nicht Lust mit neuen Leuten aus deiner City zu connecten? Dann tauch ab in die Welt von Locster! Einfach easypeasy unten registrieren und ZACK- liegt dir die ganze Stadt offen! Wir freuen uns auf dich!
+                    Hey Du! Da bist du ja wieder! Schnell unten einloggen und neue Leute aus deiner City kennlernen ;)
                 </p>
             </div>
             <div class="form">
                 <form>
                     <div class="inputs">
-                        <input type="email" placeholder="enter_email" name="email" required>
-                        <input type="password" placeholder="enter_password" name="password" required>
+                        <input type="email" placeholder="Deine Email-Adresse" name="email" required>
+                        <input type="password" placeholder="Dein Passwort" name="password" required>
                     </div>
-                    <div class="checkbox">
-                        <label>
-                <input type="checkbox" checked="checked" name="Remember"> Eingeloggt bleiben
-                </label>
-                    </div>
-                    <div class="submitButton">
+                    <div class="checkbox-button-container">
+                        <div class="checkbox">
+                            <label>
+                        <input type="checkbox" checked="checked" name="Remember"> Eingeloggt bleiben
+                        </label>
+                        </div>
+                        <div class="submitButton">
 
-                        <button type="submit">Login</button>
+                            <button class="btn" type="submit">Login</button>
+                        </div>
                     </div>
 
                 </form>
