--- a/src/main/resources/assets/css/login.css
+++ b/src/main/resources/assets/css/login.css
@@ -36,6 +36,14 @@ body {
     direction: rtl;
 }
 
+.link a {
+    color: #000;
+}
+
+.link a:hover {
+    color: blue;
+}
+
 .content-wraper-image {
     display: flex;
     align-items: center;
@@ -67,7 +75,8 @@ body {
 /* inputs form */
 
 input[type=email],
-input[type=password] {
+input[type=password],
+input[type=text] {
     width: 100%;
     height: 50px;
     background-color: white;
@@ -80,6 +89,13 @@ input[type=password] {
     outline: none;
     border-width: 2px;
     transition: 0.2s linear;
+}
+
+
+/* inputs form SignUp */
+
+input[type=text] {
+    width: 49%;
 }
 
 
