added js folder

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,6 +4,7 @@
 <head th:replace="fragments/head :: head">
     <link rel="stylesheet" href="../assets/css/login.css">
     <link rel="stylesheet" href="../assets/css/signup.css">
+    <script src="../assets/js/signup.js"></script>
     <title>Locster.de/SignUp</title>
 </head>
 
