--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -24,7 +24,7 @@
                         <input type="text" placeholder="Dein Geburtsdatum" name="birthday" required>
                         <input type="text" placeholder="Geschlecht" name="gender" required>
                         <input type="email" placeholder="Deine Email-Adresse" name="email" required>
-                        <input type="password" placeholder="Ein sicheres Passwort" name="password" required>
+                        <input type="password" placeholder="Ein sicheres Passwort" name="password" onkeyup="onPWChanged()" required>
                         <input type="password" placeholder="Passwort wiederholen" name="passwordAgain" required>
                     </div>
                     <div class="checkbox-button-container">
