--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/head :: head">
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="../assets/css/login.css">
     <link rel="stylesheet" href="../assets/css/signup.css">
     <script src="../assets/js/signup.js"></script>
@@ -25,6 +26,16 @@
                         <input type="text" placeholder="Geschlecht" name="gender" required>
                         <input type="email" placeholder="Deine Email-Adresse" name="email" required>
                         <input type="password" placeholder="Ein sicheres Passwort" name="password" onkeyup="onPasswordChanged()" required>
+                        <div>
+                            <p>Das Passwort muss mindestens
+                                <span class="length-8">8 Zeichen</span> enthalten,
+                                davon mindestens <br>
+                                <span class="major">1 Großbuchstabe</span>,
+                                <span class="minor">1 Kleinbuchstabe</span>,
+                                <span class="number">1 Zahl</span>,
+                                <span class="special">1 Sonderzeichen</span>.
+                            </p>
+                        </div>
                         <input type="password" placeholder="Passwort wiederholen" name="passwordRepeat" onkeyup="onPasswordRepeatChanged()" required>
                     </div>
                     <div class="checkbox-button-container">
