--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../assets/css/profilPage.css" />
-    <link rel="stylesheet" href="../../assets/css/navigation.css" />
+    <link rel="stylesheet" href="../assets/css/profilPage.css" />
+    <link rel="stylesheet" href="../assets/css/navigation.css" />
     <title>profile page</title>
 </head>
 <body>
 <nav>
     <div class="logo-wrapper">
         <a href="#">
-            <img src="../../assets/images/locsterLogo_Weiss.png" class="logo" />
+            <img src="../assets/images/locsterLogo_Weiss.png" class="logo" />
         </a>
     </div>
 
@@ -21,7 +21,7 @@
             <input type="text" placeholder="Search" />
             <div class="input-group-btn">
                 <button type="submit">
-                    <img src="../../assets/images/lupe.png" class="search-icon" />
+                    <img src="../assets/images/lupe.png" class="search-icon" />
                 </button>
             </div>
         </div>
@@ -29,16 +29,16 @@
 
     <div class="icon-wrapper">
         <a href="#">
-            <img src="../../assets/images/dummy.png" class="icon" />
+            <img src="../assets/images/dummy.png" class="icon" />
         </a>
         <a href="#">
-            <img src="../../assets/images/dummy.png" class="icon" />
+            <img src="../assets/images/dummy.png" class="icon" />
         </a>
         <a href="#">
-            <img src="../../assets/images/dummy.png" class="icon" />
+            <img src="../assets/images/dummy.png" class="icon" />
         </a>
         <a href="#">
-            <img src="../../assets/images/dummy.png" class="icon" />
+            <img src="../assets/images/dummy.png" class="icon" />
         </a>
     </div>
 </nav>
@@ -47,7 +47,7 @@
 
     <div class="box profile">
         <div class="pic">
-            <img class="profile_pic" src="../../assets/images/profilePic.png" alt="profile_pic" />
+            <img class="profile_pic" src="../assets/images/profilePic.png" alt="profile_pic" />
         </div>
         <div class="info">
             <h2 class="profile_name">Crab Daddy</h2>
