--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -1,112 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/profilPage.css" />
     <link rel="stylesheet" href="../assets/css/navigation.css" />
     <title>profile page</title>
-</head>
-<body>
-<nav>
-    <div class="logo-wrapper">
+  </head>
+  <body>
+    <nav>
+      <div class="logo-wrapper">
         <a href="#">
-            <img src="../assets/images/locsterLogo_Weiss.png" class="logo" />
+          <img src="../assets/images/locsterLogo_Weiss.png" class="logo" />
         </a>
-    </div>
+      </div>
 
-    <form>
+      <form>
         <div class="input-group">
-            <input type="text" placeholder="Search" />
-            <div class="input-group-btn">
-                <button type="submit">
-                    <img src="../assets/images/lupe.png" class="search-icon" />
-                </button>
-            </div>
+          <input type="text" placeholder="Search" />
+          <div class="input-group-btn">
+            <button type="submit">
+              <img src="../assets/images/lupe.png" class="search-icon" />
+            </button>
+          </div>
         </div>
-    </form>
+      </form>
 
-    <div class="icon-wrapper">
+      <div class="icon-wrapper">
         <a href="#">
-            <img src="../assets/images/dummy.png" class="icon" />
+          <img src="../assets/images/dummy.png" class="icon" />
         </a>
         <a href="#">
-            <img src="../assets/images/dummy.png" class="icon" />
+          <img src="../assets/images/dummy.png" class="icon" />
         </a>
         <a href="#">
-            <img src="../assets/images/dummy.png" class="icon" />
+          <img src="../assets/images/dummy.png" class="icon" />
         </a>
         <a href="#">
-            <img src="../assets/images/dummy.png" class="icon" />
+          <img src="../assets/images/dummy.png" class="icon" />
         </a>
-    </div>
-</nav>
+      </div>
+    </nav>
 
-<div class="container">
-
-    <div class="box profile">
+    <div class="container">
+      <div class="box profile">
         <div class="pic">
-            <img class="profile_pic" src="../assets/images/profilePic.png" alt="profile_pic" />
+          <img
+            class="profile_pic"
+            src="../assets/images/profilePic.png"
+            alt="profile_pic"
+          />
         </div>
         <div class="info">
-            <h2 class="profile_name">Crab Daddy</h2>
-            <h2 class="profile_city">aus Erdurt</h2>
-            <a class="more_info" href="#">mehr infos</a>
+          <h2 class="profile_name">Crab Daddy</h2>
+          <h2 class="profile_city">aus Erdurt</h2>
+          <a class="more_info" href="#">mehr infos</a>
         </div>
-    </div>
+        <div class="icon-edit-content">
+          <img src="../assets/images/pen.png" alt="pen" />
+        </div>
+      </div>
 
-    <div class="box status">
+      <div class="box status">
         <p class="status">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-            perferendis voluptatem, enim blanditiis recusandae molestiae earum
-            sunt, consectetur repellat rem distinctio iure neque quibusdam fugit,
-            est facilis doloribus. Nulla, culpa. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Iste perferendis voluptatem, enim
-            blanditiis recusandae molestiae earum sunt, consectetur repellat rem
-            distinctio iure neque quibusdam fugit, est facilis doloribus. Nulla,
-            culpa.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+          perferendis voluptatem, enim blanditiis recusandae molestiae earum
+          sunt, consectetur repellat rem distinctio iure neque quibusdam fugit,
+          est facilis doloribus. Nulla, culpa. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Iste perferendis voluptatem, enim
+          blanditiis recusandae molestiae earum sunt, consectetur repellat rem
+          distinctio iure neque quibusdam fugit, est facilis doloribus. Nulla,
+          culpa.
         </p>
-    </div>
+      </div>
 
-    <div class="box guestbook">
+      <div class="box guestbook">
         <div class="guestbook">
-            <h2>Gästebuch</h2>
-            <div class="post">
-                <div class="sender">
-                    <p class="">Crab Mommy schrieb dir am 01.01.1991:</p>
-                </div>
-                <div class="message">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-                        perferendis voluptatem, enim blanditiis recusandae molestiae
-                        earum sunt, consectetur repellat rem distinctio iure neque
-                        quibusdam fugit, est facilis doloribus. Nulla, culpa.
-                    </p>
-                </div>
+          <h2>Gästebuch</h2>
+          <div class="post">
+            <div class="sender">
+              <p class="">Crab Mommy schrieb dir am 01.01.1991:</p>
             </div>
+            <div class="message">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                perferendis voluptatem, enim blanditiis recusandae molestiae
+                earum sunt, consectetur repellat rem distinctio iure neque
+                quibusdam fugit, est facilis doloribus. Nulla, culpa.
+              </p>
+            </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <div class="box guestbook">
+      <div class="box guestbook">
         <div class="guestbook">
-            <h2>Meine Gästebuch</h2>
+          <h2>Meine Gästebuch</h2>
 
-            <div class="post">
-                <div class="sender">
-                    <p class="">Du schriebst Crab Kid am 01.01.1991:</p>
-                </div>
-                <div class="message">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-                        perferendis voluptatem, enim blanditiis recusandae molestiae
-                        earum sunt, consectetur repellat rem distinctio iure neque
-                        quibusdam fugit, est facilis doloribus. Nulla, culpa.
-                    </p>
-                </div>
+          <div class="post">
+            <div class="sender">
+              <p class="">Du schriebst Crab Kid am 01.01.1991:</p>
             </div>
+            <div class="message">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                perferendis voluptatem, enim blanditiis recusandae molestiae
+                earum sunt, consectetur repellat rem distinctio iure neque
+                quibusdam fugit, est facilis doloribus. Nulla, culpa.
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
