--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -45,17 +45,19 @@
 
     <div class="container">
       <div class="box profile">
-        <div class="pic">
-          <img
-            class="profile_pic"
-            src="../assets/images/profilePic.png"
-            alt="profile_pic"
-          />
-        </div>
-        <div class="info">
-          <h2 class="profile_name">Crab Daddy</h2>
-          <h2 class="profile_city">aus Erdurt</h2>
-          <a class="more_info" href="#">mehr infos</a>
+        <div class="profile-info-wrapper">
+          <div class="pic">
+            <img
+              class="profile_pic"
+              src="../assets/images/profilePic.png"
+              alt="profile_pic"
+            />
+          </div>
+          <div class="info">
+            <h2 class="profile_name">Crab Daddy</h2>
+            <h2 class="profile_city">aus Erdurt</h2>
+            <a class="more_info" href="#">mehr infos</a>
+          </div>
         </div>
         <div class="icon-edit-content">
           <img src="../assets/images/pen.png" alt="pen" />
@@ -73,6 +75,9 @@
           distinctio iure neque quibusdam fugit, est facilis doloribus. Nulla,
           culpa.
         </p>
+        <div class="icon-edit-content">
+          <img src="../assets/images/pen.png" alt="pen" />
+        </div>
       </div>
 
       <div class="box guestbook">
@@ -91,6 +96,9 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="icon-edit-content">
+          <img src="../assets/images/pen.png" alt="pen" />
         </div>
       </div>
 
@@ -111,6 +119,9 @@
               </p>
             </div>
           </div>
+        </div>
+        <div class="icon-edit-content">
+          <img src="../assets/images/pen.png" alt="pen" />
         </div>
       </div>
     </div>
