--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -96,6 +96,19 @@
               </p>
             </div>
           </div>
+          <div class="post">
+            <div class="sender">
+              <p class="">Crab Mommy schrieb dir am 01.01.1991:</p>
+            </div>
+            <div class="message">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
+                perferendis voluptatem, enim blanditiis recusandae molestiae
+                earum sunt, consectetur repellat rem distinctio iure neque
+                quibusdam fugit, est facilis doloribus. Nulla, culpa.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="icon-edit-content">
           <img src="../assets/images/pen.png" alt="pen" />
@@ -104,7 +117,7 @@
 
       <div class="box guestbook">
         <div class="guestbook">
-          <h2>Meine Gästebuch</h2>
+          <h2>Meine Gästebucheinträge</h2>
 
           <div class="post">
             <div class="sender">
