update navbar & homepage

--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -16,12 +16,14 @@
         </a>
       </div>
 
+      <!-- search -->
+
       <form>
         <div class="input-group">
           <input type="text" placeholder="Search" />
           <div class="input-group-btn">
             <button type="submit">
-              <img src="../assets/images/lupe.png" class="search-icon" />
+              <img src="../assets/icons/glass.png" class="search-icon" />
             </button>
           </div>
         </div>
@@ -29,19 +31,42 @@
 
       <div class="icon-wrapper">
         <a href="#">
-          <img src="../assets/images/dummy.png" class="icon" />
+          <img src="../assets/icons/speechbubble.png" class="icon" />
         </a>
         <a href="#">
-          <img src="../assets/images/dummy.png" class="icon" />
+          <img src="../assets/icons/group.png" class="icon" />
         </a>
         <a href="#">
-          <img src="../assets/images/dummy.png" class="icon" />
+          <img src="../assets/icons/people.png" class="icon" />
         </a>
-        <a href="#">
-          <img src="../assets/images/dummy.png" class="icon" />
-        </a>
+
+        <!-- dropdown -->
+
+        <div class="dropdown">
+          <button class="dropbtn">
+            <a href="#">
+              <img src="../assets/icons/person.png" class="icon" />
+            </a>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">
+              <img src="../assets/icons/person.png" class="icon_dropbtn" />
+              <p>Profil</p>
+            </a>
+            <a href="#">
+              <img src="../assets/icons/gear.png" class="icon_dropbtn" />
+              <p>Einstellungen</p>
+            </a>
+            <a href="./login.html">
+              <img src="../assets/icons/logout.png" class="icon_dropbtn" />
+              <p>Logout</p>
+            </a>
+          </div>
+        </div>
       </div>
     </nav>
+
+    <!-- Homepage -->
 
     <div class="container">
       <div class="box profile">
@@ -60,7 +85,7 @@
           </div>
         </div>
         <div class="icon-edit-content">
-          <img src="../assets/images/pen.png" alt="pen" />
+          <img src="../assets/icons/pen.png" alt="pen" />
         </div>
       </div>
 
@@ -76,7 +101,7 @@
           culpa.
         </p>
         <div class="icon-edit-content">
-          <img src="../assets/images/pen.png" alt="pen" />
+          <img src="../assets/icons/pen.png" alt="pen" />
         </div>
       </div>
 
@@ -111,7 +136,7 @@
           </div>
         </div>
         <div class="icon-edit-content">
-          <img src="../assets/images/pen.png" alt="pen" />
+          <img src="../assets/icons/pen.png" alt="pen" />
         </div>
       </div>
 
@@ -134,7 +159,7 @@
           </div>
         </div>
         <div class="icon-edit-content">
-          <img src="../assets/images/pen.png" alt="pen" />
+          <img src="../assets/icons/pen.png" alt="pen" />
         </div>
       </div>
     </div>
