--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -48,7 +48,7 @@
               <img src="../assets/icons/person.png" class="icon" />
             </a>
           </button>
-          <div class="dropdown-content">
+          <div class="dropdown-content sb1">
             <a href="#">
               <img src="../assets/icons/person.png" class="icon_dropbtn" />
               <p>Profil</p>
