--- a/src/main/resources/assets/css/profilPage.css
+++ b/src/main/resources/assets/css/profilPage.css
@@ -7,6 +7,7 @@
 }
 body {
   background-color: #3CB5EE;
+  font-family: 'DejaVu Sans', Arial, Helvetica, sans-serif;
 }
 .container {
   width: 800px;
