--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/profilPage.css" />
     <link rel="stylesheet" href="../assets/css/navigation.css" />
+    <script src="../assets/js/profilePage.js"></script>
     <title>profile page</title>
   </head>
   <body>
@@ -81,7 +82,17 @@
           <div class="info">
             <h2 class="profile_name">Crab Daddy</h2>
             <h2 class="profile_city">aus Erdurt</h2>
-            <a class="more_info" href="#">mehr infos</a>
+            <a class="more_info" href="#">
+              <button onClick="handleProfileStatistics()" class="collapsible">
+                mehr infos
+              </button></a
+            >
+            <div class="collapsible_content">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Blanditiis eos dolorem eius recusandae vel, iure quod temporibus
+              ipsum distinctio sit et consectetur expedita assumenda quae?
+              Maiores, facilis? Tenetur, fuga natus?
+            </div>
           </div>
         </div>
         <div class="icon-edit-content">
