--- a/src/main/resources/assets/css/profilPage.css
+++ b/src/main/resources/assets/css/profilPage.css
@@ -40,8 +40,19 @@ body {
 .profile {
 }
 
-.collapsible_content {
+.collapsible {
+  cursor: pointer;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.content {
+  padding: 0 18px;
   display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
 
 .profile_pic {
