--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/profilPage.css" />
     <link rel="stylesheet" href="../assets/css/navigation.css" />
-    <script src="../assets/js/profilePage.js"></script>
     <title>profile page</title>
   </head>
   <body>
@@ -82,16 +81,14 @@
           <div class="info">
             <h2 class="profile_name">Crab Daddy</h2>
             <h2 class="profile_city">aus Erdurt</h2>
-            <a class="more_info" href="#">
-              <button onClick="handleProfileStatistics()" class="collapsible">
-                mehr infos
-              </button></a
-            >
-            <div class="collapsible_content">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Blanditiis eos dolorem eius recusandae vel, iure quod temporibus
-              ipsum distinctio sit et consectetur expedita assumenda quae?
-              Maiores, facilis? Tenetur, fuga natus?
+            <button type="button" class="collapsible">Open Collapsible</button>
+            <div class="content">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
+              </p>
             </div>
           </div>
         </div>
@@ -174,5 +171,7 @@
         </div>
       </div>
     </div>
+
+    <script type="text/javascript" src="../assets/js/profilePage.js"></script>
   </body>
 </html>
