--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -83,12 +83,43 @@
             <h2 class="profile_city">aus Erdurt</h2>
             <button type="button" class="collapsible">Open Collapsible</button>
             <div class="content">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </p>
+              <div class="ProfileInfos">
+                <div class="ProfileInfosHeader">
+                  <div class="ProfileInfos_group">
+                    <div class="birthday">
+                      <p>icon</p>
+                      <p>01.01.1990</p>
+                    </div>
+                    <div class="gender">
+                      <p>icon</p>
+                      <p>Mann</p>
+                    </div>
+                    <div class="relationship">
+                      <p>Icon</p>
+                      <p>Single</p>
+                    </div>
+                    <div class="job">
+                      <p>Icon</p>
+                      <p>Fischer</p>
+                    </div>
+                  </div>
+                  <div class="visitor">
+                    <p>icon</p>
+                    <p>523</p>
+                  </div>
+                </div>
+                <div class="ProfileInfosFooter">
+                  <div class="lastVisitor">
+                    <p>letzter Besucher: Crab Kid</p>
+                  </div>
+                  <div class="newFriend">
+                    <p>letzter Besucher: Crab Kid</p>
+                  </div>
+                  <div class="oldFriend">
+                    <p>letzter Besucher: Crab Kid</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
