--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -81,7 +81,7 @@
           <div class="info">
             <h2 class="profile_name">Crab Daddy</h2>
             <h2 class="profile_city">aus Erdurt</h2>
-            <button type="button" class="collapsible">Open Collapsible</button>
+            <button type="button" class="collapsible">mehr Infos</button>
             <div class="content">
               <div class="ProfileInfos">
                 <div class="ProfileInfosHeader">
