--- a/src/main/resources/assets/css/profilPage.css
+++ b/src/main/resources/assets/css/profilPage.css
@@ -37,22 +37,56 @@ body {
 
 /* profile structure */
 
-.profile {
-}
+/* collapsible profile infos */
 
 .collapsible {
   cursor: pointer;
   border: none;
+  padding: 0 15px;
+  background-color: #fff3b1;
+  color: #3cb5ee;
   text-align: left;
   outline: none;
   font-size: 15px;
 }
 
 .content {
-  padding: 0 18px;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: #fff3b1;
+}
+
+.ProfileInfosHeader {
+  display: flex;
+  flex-direction: row;
+}
+
+.ProfileInfos_group {
+}
+
+.birthday {
+  display: flex;
+  flex-direction: inherit;
+}
+
+.gender {
+  display: flex;
+  flex-direction: inherit;
+}
+
+.relationship {
+  display: flex;
+  flex-direction: inherit;
+}
+
+.job {
+  display: flex;
+  flex-direction: inherit;
+}
+
+.ProfileInfosFooter {
+  display: flex;
+  flex-direction: column;
 }
 
 .profile_pic {
