--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -86,29 +86,53 @@
               <div class="ProfileInfos">
                 <div class="ProfileInfosHeader">
                   <div class="ProfileInfos_group">
-                    <div class="birthday">
-                      <p>icon</p>
-                      <p>01.01.1990</p>
+                    <div class="group1">
+                      <div class="birthday profileinfo">
+                        <img
+                          class="profileInfoIcons"
+                          src="../assets/icons/cake.svg"
+                          alt="cake"
+                        />
+                        <p>01.01.1990</p>
+                      </div>
+                      <div class="gender profileinfo">
+                        <img
+                          class="profileInfoIcons"
+                          src="../assets/icons/genders-gender-svgrepo-com.svg"
+                          alt="icon"
+                        />
+                        <p>Mann</p>
+                      </div>
                     </div>
-                    <div class="gender">
-                      <p>icon</p>
-                      <p>Mann</p>
-                    </div>
-                    <div class="relationship">
-                      <p>Icon</p>
-                      <p>Single</p>
-                    </div>
-                    <div class="job">
-                      <p>Icon</p>
-                      <p>Fischer</p>
+                    <div class="group2">
+                      <div class="relationship profileinfo">
+                        <img
+                          class="profileInfoIcons"
+                          src="../assets/icons/heart-thin.svg"
+                          alt="heart"
+                        />
+                        <p>Single</p>
+                      </div>
+                      <div class="job profileinfo">
+                        <img
+                          class="profileInfoIcons"
+                          src="../assets/icons/job-seeker.svg"
+                          alt="job"
+                        />
+                        <p>Fischer</p>
+                      </div>
                     </div>
                   </div>
-                  <div class="visitor">
-                    <p>icon</p>
+                  <div class="visitor profileinfo">
+                    <img
+                      class="profileInfoIcons"
+                      src="../assets/icons/guest-traveler.svg"
+                      alt="icon"
+                    />
                     <p>523</p>
                   </div>
                 </div>
-                <div class="ProfileInfosFooter">
+                <div class="profileInfosFooter">
                   <div class="lastVisitor">
                     <p>letzter Besucher: Crab Kid</p>
                   </div>
