--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -83,65 +83,61 @@
             <h2 class="profile_city">aus Erdurt</h2>
             <button type="button" class="collapsible">mehr Infos</button>
             <div class="content">
-              <div class="ProfileInfos">
-                <div class="ProfileInfosHeader">
-                  <div class="ProfileInfos_group">
-                    <div class="group1">
-                      <div class="birthday profileinfo">
-                        <img
-                          class="profileInfoIcons"
-                          src="../assets/icons/cake.svg"
-                          alt="cake"
-                        />
-                        <p>01.01.1990</p>
-                      </div>
-                      <div class="gender profileinfo">
-                        <img
-                          class="profileInfoIcons"
-                          src="../assets/icons/genders-gender-svgrepo-com.svg"
-                          alt="icon"
-                        />
-                        <p>Mann</p>
-                      </div>
-                    </div>
-                    <div class="group2">
-                      <div class="relationship profileinfo">
-                        <img
-                          class="profileInfoIcons"
-                          src="../assets/icons/heart-thin.svg"
-                          alt="heart"
-                        />
-                        <p>Single</p>
-                      </div>
-                      <div class="job profileinfo">
-                        <img
-                          class="profileInfoIcons"
-                          src="../assets/icons/job-seeker.svg"
-                          alt="job"
-                        />
-                        <p>Fischer</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="visitor profileinfo">
+              <div class="ProfileInfosHeader">
+                <div class="group1">
+                  <div class="birthday group profileinfo">
                     <img
                       class="profileInfoIcons"
-                      src="../assets/icons/guest-traveler.svg"
+                      src="../assets/icons/cake.svg"
+                      alt="cake"
+                    />
+                    <p>01.01.1990</p>
+                  </div>
+                  <div class="gender group profileinfo">
+                    <img
+                      class="profileInfoIcons"
+                      src="../assets/icons/genders-gender-svgrepo-com.svg"
                       alt="icon"
                     />
-                    <p>523</p>
+                    <p>Mann</p>
                   </div>
                 </div>
-                <div class="profileInfosFooter">
-                  <div class="lastVisitor">
-                    <p>letzter Besucher: Crab Kid</p>
+                <div class="group2">
+                  <div class="relationship group profileinfo">
+                    <img
+                      class="profileInfoIcons"
+                      src="../assets/icons/heart-thin.svg"
+                      alt="heart"
+                    />
+                    <p>Single</p>
                   </div>
-                  <div class="newFriend">
-                    <p>letzter Besucher: Crab Kid</p>
+                  <div class="job group profileinfo">
+                    <img
+                      class="profileInfoIcons"
+                      src="../assets/icons/job-seeker.svg"
+                      alt="job"
+                    />
+                    <p>Fischer</p>
                   </div>
-                  <div class="oldFriend">
-                    <p>letzter Besucher: Crab Kid</p>
-                  </div>
+                </div>
+                <div class="visitor profileinfo">
+                  <img
+                    class="profileInfoIcons"
+                    src="../assets/icons/guest-traveler.svg"
+                    alt="icon"
+                  />
+                  <p>523</p>
+                </div>
+              </div>
+              <div class="profileInfosFooter">
+                <div class="lastVisitor">
+                  <p>letzter Besucher: Crab Kid</p>
+                </div>
+                <div class="newFriend">
+                  <p>neuester Freund: Crab Kong</p>
+                </div>
+                <div class="oldFriend">
+                  <p>ältester Freund: Crab Mommy</p>
                 </div>
               </div>
             </div>
