--- a/src/main/resources/assets/css/profilPage.css
+++ b/src/main/resources/assets/css/profilPage.css
@@ -50,7 +50,7 @@ body {
   font-size: 15px;
 }
 
-.content {
+.info .content {
   display: none;
   overflow: hidden;
   background-color: #fff3b1;
@@ -66,6 +66,7 @@ body {
 }
 .group2 {
   display: flex;
+  justify-content: space-between;
 }
 
 .visitor {
@@ -74,22 +75,7 @@ body {
   justify-content: center;
 }
 
-.birthday {
-  display: flex;
-  flex-direction: inherit;
-}
-
-.gender {
-  display: flex;
-  flex-direction: inherit;
-}
-
-.relationship {
-  display: flex;
-  flex-direction: inherit;
-}
-
-.job {
+.content .group {
   display: flex;
   flex-direction: inherit;
 }
