add a setting route

--- a/src/main/resources/templates/profilPage.html
+++ b/src/main/resources/templates/profilPage.html
@@ -53,7 +53,7 @@
               <img src="../assets/icons/person.png" class="icon_dropbtn" />
               <p>Profil</p>
             </a>
-            <a href="#">
+            <a href="./setting.html">
               <img src="../assets/icons/gear.png" class="icon_dropbtn" />
               <p>Einstellungen</p>
             </a>
