LOC-17 updated input radio & css

--- a/src/main/resources/assets/css/setting.css
+++ b/src/main/resources/assets/css/setting.css
@@ -36,9 +36,9 @@ body {
   padding-left: 15px;
 }
 
-input[type="email"],
-input[type="password"],
-input[type="text"] {
+.inputs input[type="email"],
+.inputs input[type="password"],
+.inputs input[type="text"] {
   width: 416px;
   background-color: #fffbe3;
   border-radius: 25px;
