--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -88,6 +88,7 @@
           </div>
 
           <div class="privacyBody">
+
             <div class="selection">
               <img src="../assets/icons/lock_closed.png" alt="logo">
               <label for="privacy1">
@@ -95,9 +96,10 @@
                 +Statistiken anschauen
               </label>
               <div class="checkbox">
-                <input type="checkbox" name="privacy" id="privacy1" value="#">
+                <input type="radio" name="privacy" id="privacy1" value="#">
               </div>
             </div>
+
             <div class="selection">
               <img src="../assets/icons/lock_open.png" alt="logo">
               <label for="privacy2">
@@ -105,9 +107,10 @@
                 +Statistiken anschauen
               </label>
               <div class="checkbox">
-                <input type="checkbox" name="privacy" id="privacy2" value="#">
+                <input type="radio" name="privacy" id="privacy2" value="#">
               </div>
             </div>
+
             <div class="selection">
               <img src="../assets/icons/world.png" alt="logo">
               <label for="privacy3">
@@ -115,9 +118,10 @@
                 +Statistiken anschauen
               </label>
               <div class="checkbox">
-                <input type="checkbox" name="privacy" id="privacy3" value="#">
+                <input type="radio" name="privacy" id="privacy3" value="#">
               </div>
             </div>
+
           </div>
         </div>
         <div class="buttons">
