replaced accept.png with accept.svg styled button

--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -129,7 +129,7 @@
             <button class="profileDeleteBtn">Profil löschen</button>
           </div>
           <div class="submit">
-            <button class="submitBtn"><img src="../assets/icons/accept.png" alt="logo"></button>
+            <button class="submitBtn"><img src="../assets/icons/accept.svg" alt="logo"></button>
           </div>
         </div>
       </form>
